# llm_scratch

./: .gitignore  AGENTS.md  Makefile  README.md  inference.ipynb  main.py  model.py  model_35.pth  pyproject.toml  test_train_tokenizer.py  transformer.ipynb  transformer.py
config/: train.yaml
data/: inputLearnText.txt
legacy/: attention.ipynb  inference.ipynb  transformer.ipynb  transformer.py
src/: train.py  train_tokenizer.py
src/datasets/: text_dataset.py
src/models/: embedding.py  simple_decoder_transformer.py  simple_transformer.py
src/tokenizer/: artifacts.py  bpe.py
src/training/: trainer.py
src/utils/: model.py
tests/: test_decoder_only.py
